# Zghost

./: CMakeLists.txt  Makefile  README.md  workspace.code-workspace
examples/: hello.asm  indexados.asm  indices.asm  interrup1.asm  pilha.asm  zx81.asm
src/: interrup1.asm  main.asm
test/: CMakeLists.txt  Console.cpp  Console.hpp  main.cpp
zghost/: CMakeLists.txt
zghost/bus/: Bus.hpp  Device.hpp  Latch.hpp  Memory.hpp  PPI8255.hpp
zghost/src/: Bus.cpp  CMakeLists.txt  Latch.cpp  Memory.cpp  OpCode.cpp  OpCodeCB.cpp  OpCodeDD.cpp  OpCodeDDCBFDCB.cpp  OpCodeED.cpp  OpCodeFD.cpp  PPI8255.cpp  Z80.cpp
zghost/src/bus/: Bus.cpp  Latch.cpp  Memory.cpp  PPI8255.cpp
zghost/src/z80/: OpCode.cpp  OpCodeDDCBFDCB.cpp  OpCodeFD.cpp  Z80.cpp
zghost/z80/: OpCode.hpp  OpCodeCB.hpp  OpCodeDD.hpp  OpCodeDDCBFDCB.hpp  OpCodeED.hpp  OpCodeFD.hpp  R16.hpp  Z80.hpp
